...
                else
                    navigateToOtpVerificationScreen()
            },
            colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFE60000)),
            modifier = Modifier
                .height(50.dp)
                .testTag("loginButtonTag")
                .constrainAs(loginButton) {
                    top.linkTo(keepmeSignInCheckbox.bottom, margin = 15.dp)
                    start.linkTo(parent.start)
                    end.linkTo(parent.end)
                    width = Dimension.fillToConstraints
                },
...
